Bugfix: hdpi pxTolerance increase by reference, Bugfix: tooltip dark mode for right sidebar

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -251,6 +251,9 @@ section#sidebar[data-pos='right'] ~ div.tooltip {
     border-right-color: transparent;
     border-left-color: #444; }
 
+body.dark section#sidebar[data-pos='right'] ~ div.tooltip::before {
+  border-left-color: #222; }
+
 div.checkbox {
   position: relative;
   width: 20px;
